fix squished logo

--- a/src/app/components/Header/header.css
+++ b/src/app/components/Header/header.css
@@ -36,10 +36,6 @@
 
 .brandBasis {
   flex-basis: 120px;
-
-  @media screen and (max-width: 768px) {
-    flex-basis: 60px;
-  }
 }
 
 .logo {
